--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -10,8 +10,8 @@
 <div class="sidenav">
   <form class="w-100" method="post">
     <h5> <b> Refine Results </b> </h5> <hr>
-    <input style="margin-bottom: 2vh;" class="form-control" type="search" placeholder="Search" aria-label="Search">
-    <select style="margin-bottom: 2vh;" class="form-control" method="post" id="sort">
+    <input style="margin-bottom: 2vh;" class="form-control" type="search" name="search" placeholder="Search" aria-label="Search">
+    <select style="margin-bottom: 2vh;" class="form-control" method="post" id="sort" name="sort">
         <!-- <option type="hidden" value="default">Select a sort</option> -->
         <option value="dateposted-desc" id="dateposted-desc">Date Created (Newest - Oldest)</option>
         <option value="dateposted-asc" id="dateposted-asc"> Date Created (Oldest - Newest)</option>
