Implement finding functions in middleware

--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -61,28 +61,28 @@
         <div class="input-group-prepend">
           <div class="input-group-text" id="btnGroupAddon">$</div>
         </div>
-        <input type="number" class="form-control" id="maxPrice" aria-describedby="" value="None" min="0" placeholder="Enter price">
+        <input type="number" class="form-control" name="maximum-cost" aria-describedby="" value="None" min=0 step=0.01 placeholder="Enter price">
       </div>
       <br>
 
       <b> Grade </b> <br>
-      <input type="checkbox" name="FROSH" value="FROSH">
+      <input type="checkbox" name="grade-FROSH" value="FROSH">
       <label for="grade1"> Freshman </label><br>
-      <input type="checkbox" name="SOPH" value="SOPH">
+      <input type="checkbox" name="grade-SOPH" value="SOPH">
       <label for="grade2"> Sophomore </label><br>
-      <input type="checkbox" name="JUNIOR" value="JUNIOR">
+      <input type="checkbox" name="grade-JUNIOR" value="JUNIOR">
       <label for="grade3"> Junior </label><br>
-      <input type="checkbox" name="SENIOR" value="SENIOR">
+      <input type="checkbox" name="grade-SENIOR" value="SENIOR">
       <label for="grade4"> Senior </label><br>
 
       <br>
 
       <b> Gender </b> <br>
-      <input type="checkbox" name="CO-ED" value="CO-ED">
+      <input type="checkbox" name="gender-CO-ED" value="CO-ED">
       <label for="gender1"> Co-ed </label><br>
-      <input type="checkbox" name="MALE" value="MALE">
+      <input type="checkbox" name="gender-MALE" value="MALE">
       <label for="gender2"> Male only </label><br>
-      <input type="checkbox" name="FEMALE" value="FEMALE">
+      <input type="checkbox" name="gender-FEMALE" value="FEMALE">
       <label for="gender3"> Female only </label><br>
       </div>
       </div>
