Fix inconsistencies in form queries

--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -15,10 +15,10 @@
         <!-- <option type="hidden" value="default">Select a sort</option> -->
         <option value="dateposted-desc" id="dateposted-desc">Date Created (Newest - Oldest)</option>
         <option value="dateposted-asc" id="dateposted-asc"> Date Created (Oldest - Newest)</option>
-        <option value="deadline-desc" id="deadline-desc"> Deadline (Most Recent - Least Recent)</option>
+        <option value="deadline-desc" id="deadline-desc"> Deadline (Least Recent - Most Recent)</option>
         <option value="deadline-asc" id="deadline-asc"> Deadline (Most Recent - Least Recent))</option>
-        <option value="cost-desc" id="cost-desc"> Price ($ - $$$$)</option>
-        <option value="cost-asc" id="cost-asc"> Price ($$$$ - $)</option>
+        <option value="cost-asc" id="cost-asc"> Price ($ - $$$$)</option>
+        <option value="cost-desc" id="cost-desc"> Price ($$$$ - $)</option>
     </select>
 
     <button style="margin-bottom: 2vh;" class="btn btn-primary btn-sm form-control" type="button" data-toggle="collapse" data-target="#collapseExample"
@@ -66,23 +66,23 @@
       <br>
 
       <b> Grade </b> <br>
-      <input type="checkbox" name="grade-FROSH" value="FROSH">
+      <input type="checkbox" name="grade-9" value="9">
       <label for="grade1"> Freshman </label><br>
-      <input type="checkbox" name="grade-SOPH" value="SOPH">
+      <input type="checkbox" name="grade-10" value="10">
       <label for="grade2"> Sophomore </label><br>
-      <input type="checkbox" name="grade-JUNIOR" value="JUNIOR">
+      <input type="checkbox" name="grade-11" value="11">
       <label for="grade3"> Junior </label><br>
-      <input type="checkbox" name="grade-SENIOR" value="SENIOR">
+      <input type="checkbox" name="grade-12" value="12">
       <label for="grade4"> Senior </label><br>
 
       <br>
 
       <b> Gender </b> <br>
-      <input type="checkbox" name="gender-CO-ED" value="CO-ED">
+      <input type="checkbox" name="gender-co-ed" value="co-ed">
       <label for="gender1"> Co-ed </label><br>
-      <input type="checkbox" name="gender-MALE" value="MALE">
+      <input type="checkbox" name="gender-male-only" value="male-only">
       <label for="gender2"> Male only </label><br>
-      <input type="checkbox" name="gender-FEMALE" value="FEMALE">
+      <input type="checkbox" name="gender-female-only" value="female-only">
       <label for="gender3"> Female only </label><br>
       </div>
       </div>
