Fix form requirements and queries

--- a/app/templates/create/opportunity.html
+++ b/app/templates/create/opportunity.html
@@ -76,7 +76,7 @@
         <div class="form-group col-md-6">
             <label for="grades"><b>Grades</b></label>
             <input name="grades" type="text" class="form-control" id="grades"
-                placeholder="Enter grades separated by commas (e.g. 9,10,11)">
+                placeholder="Enter grades separated by commas (e.g. 9,10,11)" required>
         </div>
     </div>
     <div class="mb-2 font-weight-bold">
