--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -6,6 +6,27 @@
      ('/preferences', 'preferences', 'Preferences'),
  ] %}
 
+{% set fields = [
+     'Academic Programs',
+     'Business & Jobs',
+     'Community Service',
+     'Govt & Law',
+     'Leadership & Advocacy',
+     'Museums & Art',
+     'Parks, Zoos, & Nature',
+     'Engineering, Math, & CS',
+     'Medical & Life Sciences',
+     'Literature',
+     'Performing Arts',
+     'Visual Arts'
+ ] %}
+
+{% set genders = [
+     ('co-ed', 'Co-Ed'),
+     ('female-only', 'Female only'),
+     ('male-only', 'Male only')
+] %}
+
 {% set active_page = active_page|default('opportunities') -%}
 
 <!DOCTYPE html>
@@ -83,7 +104,7 @@
                     href="/logout"
                     {% if "create" in request.url %}
                     tabindex="-1"
-                    
+
                     {% endif %}
                     >Log out</a></span>
 
