Create basic preferences page

--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -27,6 +27,13 @@
      ('male-only', 'Male only')
 ] %}
 
+{% set grades = [
+     ('9', 'Freshman'),
+     ('10', 'Sophomore'),
+     ('11', 'Junior'),
+     ('12', 'Senior')
+] %}
+
 {% set active_page = active_page|default('opportunities') -%}
 
 <!DOCTYPE html>
