--- a/app/templates/view/preferences.html
+++ b/app/templates/view/preferences.html
@@ -6,41 +6,50 @@
 
 {% block body %}
 <form action="/preferences" method="POST">
-    <b>Fields</b><br>
-    {% for field in fields %}
-    <input type="checkbox" name="field-{{ field }}" value="{{ field }}"
-        {% if field in prefs['field'] %}
-        checked
-        {% endif %}>
-    <label>{{field}}</label><br>
-    {% endfor %}
-    <b> Gender </b> <br>
-    {% for value, display in genders %}
-    <input type="checkbox" name="gender-{{ value }}" value="{{ value }}"
-        {% if value in prefs['gender'] %}
-        checked
-        {% endif %}>
-    <label> {{ display }}</label><br>
-    {% endfor %}
-    <b>Maximum Cost</b><br>
-    <div style="width: 16vw;" class="input-group">
-        <div class="input-group-prepend">
-            <div class="input-group-text">$</div>
+    <div class="row">
+        <div class="col-md-6" align="center">
+            <b>Fields</b><br>
+            {% for field in fields %}
+            <input type="checkbox" name="field-{{ field }}" value="{{ field }}"
+                {% if field in prefs['field'] %}
+                checked
+                {% endif %}>
+            <label>{{field}}</label><br>
+            {% endfor %}
         </div>
-        <input type="number" class="form-control" name="maximum-cost" min=0 step=0.01 placeholder="Enter price"
-            {% if prefs['cost']|length == 1 %}
-                value="{{ prefs['cost'][0] }}"
-            {% endif %}>
+        <div class="col-md-6" align="center">
+            <b> Gender </b> <br>
+            {% for value, display in genders %}
+            <input type="checkbox" name="gender-{{ value }}" value="{{ value }}"
+                {% if value in prefs['gender'] %}
+                checked
+                {% endif %}>
+            <label> {{ display }}</label><br>
+            {% endfor %}
+            <br>
+            <b>Maximum Cost</b><br>
+            <div style="width: 16vw;" class="input-group">
+                <div class="input-group-prepend">
+                    <div class="input-group-text">$</div>
+                </div>
+                <input type="number" class="form-control" name="maximum-cost" min=0 step=0.01 placeholder="Enter price"
+                    {% if prefs['cost']|length == 1 %}
+                        value="{{ prefs['cost'][0] }}"
+                    {% endif %}>
+            </div>
+            <br>
+            <b> Grade </b> <br>
+            {% for value, display in grades %}
+            <input type="checkbox" name="grade-{{ value }}" value="{{ value }}"
+                {% if value|int in prefs['grade'] %}
+                checked
+                {% endif %}>
+            <label>{{ display }}</label><br>
+            {% endfor %}
+        </div>
     </div>
-    <br>
-    <b> Grade </b> <br>
-    {% for value, display in grades %}
-    <input type="checkbox" name="grade-{{ value }}" value="{{ value }}"
-        {% if value|int in prefs['grade'] %}
-        checked
-        {% endif %}>
-    <label>{{ display }}</label><br>
-    {% endfor %}
-    <button class="btn btn-outline-primary btn-sm" type="submit">Set Preferences</button>
+    <div class="text-center">
+        <button class="btn btn-primary" type="submit">Set Preferences</button>
+    </div>
 </form>
 {% endblock %}
