Parameterize AJAX request for favorites

--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -193,7 +193,7 @@
       {% endfor %}
 
       <button style="float: right; font-size: 20px; border: 0; padding: 0; background-color: transparent; outline: none;"
-              class="text-secondary star" onclick="favorite({{opp.opportunityID}});">
+              class="text-secondary star" onclick="favorite('opportunity',{{opp.opportunityID}});">
         <i class="fa fa-star" aria-hidden="true"></i>
       </button>
     </div>
