--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -19,11 +19,16 @@
 
 {% block body %}
 
-{{ body }}
 <!-- SIDENAV -->
 <div class="sidenav">
   <form class="w-100" action="/opportunities" method="POST">
-    <h5> <b> Refine Results </b> </h5> <hr>
+    <div class="d-flex flex-row justify-content-between">
+      <span class="h5"><b>Refine Results</b></span>
+      {% if body %}
+      <a class="btn btn-outline-danger btn-sm w-25" href="/opportunities">Clear</a>
+      {% endif %}
+    </div>
+    <hr>
     <input style="margin-bottom: 2vh;" class="form-control" type="search" name="search" placeholder="Search" aria-label="Search"
       {% if body %}
       value="{{ body['search'] }}"
@@ -52,7 +57,8 @@
     <br>
     <div id="collapse-filters" style="margin-bottom: 2vh;"
       class="collapse
-      {% if (
+
+      {% if body and (
               body['filters']['field']|length > 0 or body['filters']['maximum-cost'] != None or
               body['filters']['grade']|length > 0 or body['filters']['gender']|length > 0
             ) %}
