--- a/app/templates/view/resources.html
+++ b/app/templates/view/resources.html
@@ -14,7 +14,13 @@
 <!-- SIDENAV -->
 <div class="sidenav">
   <form class="w-100" action="/resources" method="POST">
-    <h5> <b> Refine Results </b> </h5> <hr>
+    <div class="d-flex flex-row justify-content-between">
+      <span class="h5"><b>Refine Results</b></span>
+      {% if body %}
+      <a class="btn btn-outline-danger btn-sm w-25" href="/opportunities">Clear</a>
+      {% endif %}
+    </div>
+    <hr>
     <input style="margin-bottom: 2vh;" class="form-control" type="search" name="search" placeholder="Search" aria-label="Search"
     {% if body %}
       value="{{ body['search'] }}"
