--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -4,6 +4,10 @@
 
 {% block title %}Scholarships{% endblock %}
 
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/favorite.js') }}"></script>
+{% endblock %}
+
 {% set sort_options = [
   ('dateposted-desc', 'Date Created (Newest - Oldest)'),
   ('dateposted-asc', 'Date Created (Oldest - Newest)'),
@@ -16,7 +20,13 @@
 {% block body %}
 <div class="sidenav">
   <form class="w-100" action="/scholarships" method="POST">
-    <h5> <b> Refine Results </b> </h5> <hr>
+    <div class="d-flex flex-row justify-content-between">
+      <span class="h5"><b>Refine Results</b></span>
+      {% if body %}
+      <a class="btn btn-outline-danger btn-sm w-25" href="/opportunities">Clear</a>
+      {% endif %}
+    </div>
+    <hr>
     <input style="margin-bottom: 2vh;" class="form-control" type="search" name="search" placeholder="Search" aria-label="Search"
     {% if body %}
       value="{{ body['search'] }}"
