Add dollar sign preprend

--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -78,7 +78,7 @@
             <label for="minPrice"><b> Maximum Price </b> </label> <br>
             <div style="width: 16vw;" class="input-group">
               <div class="input-group-prepend">
-                <div class="input-group-text" id="btnGroupAddon">$</div>
+                <div class="input-group-text" id="dollar-sign"><b>$</b></div>
               </div>
               <input type="number" class="form-control" name="maximum-cost" min=0 step=0.01 placeholder="Enter price"
                 {% if body %} {% if body['filters']['maximum-cost'] != None %}
