--- a/app/templates/create/opportunity.html
+++ b/app/templates/create/opportunity.html
@@ -39,7 +39,13 @@
         </div>
         <div class="form-group col-md-4">
             <label for="cost"><b>Cost</b></label>
-            <input name="cost" type="number" min=0 step=0.01 value=0 class="form-control" id="cost" placeholder="Enter cost ($)" required>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text" id="dollar-sign"><b>$</b></div>
+                    </div>
+                    <input name="cost" type="number" min=0 step=0.01 value=0 class="form-control" id="cost" placeholder="Enter cost" required>
+                </div>
+            </div>
         </div>
     </div>
     <div class="form-row">
