--- a/app/templates/create/scholarship.html
+++ b/app/templates/create/scholarship.html
@@ -30,8 +30,12 @@
     </div>
     <div class="form-group row">
         <label for="amount" class="col-sm-2 col-form-label font-weight-bold">Amount ($)</label>
-        <div class="col-sm-10">
-            <input name="amount" type="number" type="number" min=0 step=0.01 value=0 class="form-control" id="amount" placeholder="Enter the amount of money rewarded">
+        <div class="input-group col-sm-10">
+            <div class="input-group-prepend">
+                <div class="input-group-text" id="dollar-sign"><b>$</b></div>
+            </div>
+            <input name="amount" type="number" type="number" min=0 step=0.01 value=0 class="form-control" id="amount"
+                placeholder="Enter the amount of money rewarded">
         </div>
     </div>
     <div class="form-group row">
