--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -149,7 +149,7 @@
     <a href="/opportunities/{{ opp.opportunityID }}"><h3>{{ opp.title }}</a> &nbsp;
     <!-- field -->
       {% if opp.field %}
-      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp;  {{ opp.field }} &nbsp; </a> &nbsp;
+      <a class="btn btn-primary btn-sm" style="color: white !important;">&nbsp;  {{ opp.field }} &nbsp; </a> &nbsp;
       {% endif %}
     </h3></a>
     <!-- date -->
@@ -187,24 +187,24 @@
     <div class="tag-block">
       <!-- gender -->
       {% if opp.gender %}
-      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; {{ opp.gender }} &nbsp; </a> &nbsp;
+      <a class="btn btn-primary btn-sm">&nbsp; {{ opp.gender }} &nbsp; </a> &nbsp;
       {% endif %}
 
       <!-- cost (if free) -->
       {% if opp.cost == 0 %}
-      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; free &nbsp;</a> &nbsp;
+      <a class="btn btn-primary btn-sm">&nbsp; free &nbsp;</a> &nbsp;
       {% endif %}
 
       <!-- grades -->
       {% for grade in opp.grades %}
       {% if grade == 9 %}
-      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; freshmen &nbsp; </a> &nbsp;
+      <a class="btn btn-primary btn-sm">&nbsp; freshmen &nbsp; </a> &nbsp;
       {% elif grade == 10 %}
-      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; sophomores &nbsp; </a> &nbsp;
+      <a class="btn btn-primary btn-sm">&nbsp; sophomores &nbsp; </a> &nbsp;
       {% elif grade == 11 %}
-      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; juniors &nbsp; </a> &nbsp;
+      <a class="btn btn-primary btn-sm">&nbsp; juniors &nbsp; </a> &nbsp;
       {% elif grade == 12 %}
-      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; seniors &nbsp; </a> &nbsp;
+      <a class="btn btn-primary btn-sm">&nbsp; seniors &nbsp; </a> &nbsp;
       {% endif %}
       {% endfor %}
 
