--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -144,7 +144,7 @@
 <!-- OPPORTUNTIIES (right) -->
 <div class="opportunities">
   {% for opp in opportunityList %}
-  <div class="opp-block">
+  <div id="{{ opp.opportunityID }}" class="opp-block">
     <br>
     <a href="/opportunities/{{ opp.opportunityID }}"><h3>{{ opp.title }}</a> &nbsp;
     <!-- field -->
