--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -71,7 +71,7 @@
     <p>{{ scholar.description }}</p>
     <!-- links -->
     {% for link in scholar.links %}
-    <a href="{{ link }}">{{ link }}</a> <br>
+    <a href="{{ link }}">{{ link }}</a>
     {% endfor %}
 
     <button style="float: right; font-size: 20px; border: 0; padding: 0; background-color: transparent; outline: none;"
