to be honest, not sure what i did

--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -75,7 +75,7 @@
     {% endfor %}
 
     <button style="float: right; font-size: 20px; border: 0; padding: 0; background-color: transparent; outline: none;"
-      class="text-secondary star" onclick="favorite('scholarship',{{scholar.scholarshipID}});">
+      class="text-secondary star" onclick="favorite('scholarship',{{scho8lar.scholarshipID}});">
       <i class="fa fa-star" aria-hidden="true"></i>
     </button>
     <br> <br>
