Fill out edit form with opportunity info

--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -107,7 +107,7 @@
                     >{{ caption|e }}</a> &emsp;
                {% endfor %}
                {% if user.userType == "admin" %}
-               <div class="dropdown show">
+               <div class="dropdown show d-inline">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                          Create
                     </a>
