--- a/app/templates/edit/opportunity.html
+++ b/app/templates/edit/opportunity.html
@@ -7,17 +7,17 @@
 {% block title %}Edit Opportunity{% endblock %}
 
 {% block body %}
-<form action="/opportunities/edit" method="POST">
+<form action="/opportunities/edit/{{obj.opportunityID}}" method="POST">
     <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label font-weight-bold">Title</label>
         <div class="col-sm-10">
-            <input name="title" type="text" class="form-control" id="title" placeholder="Enter title" required>
+            <input name="title" type="text" class="form-control" id="title" placeholder="Enter title" value="{{obj.title}}"required>
         </div>
     </div>
     <div class="form-group row">
         <label for="description" class="col-sm-2 col-form-label font-weight-bold">Description</label>
         <div class="col-sm-10">
-            <textarea name="description" class="form-control" id="description" rows="3"></textarea>
+            <textarea name="description" class="form-control" id="description" rows="3">{{ obj.description }}</textarea>
         </div>
     </div>
     <div class="form-row">
@@ -25,7 +25,11 @@
             <label for="field"><b>Field</b></label>
             <select class="form-control" name="field" id="field">
                 {% for field in fields %}
-                <option value="{{ field }}">{{ field }}</option>
+                <option value="{{ field }}"
+                    {% if obj.field == field %}
+                    selected
+                    {% endif %}
+                >{{ field }}</option>
                 {% endfor %}
             </select>
         </div>
@@ -33,7 +37,11 @@
             <label for="gender"><b>Gender</b></label>
             <select class="form-control" name="gender" id="gender">
                 {% for value, display in genders %}
-                    <option value="{{ value }}">{{ display }}</option>
+                    <option value="{{ value }}"
+                        {% if obj.gender == value %}
+                        selected
+                        {% endif %}
+                    >{{ display }}</option>
                 {% endfor %}
             </select>
         </div>
@@ -43,7 +51,7 @@
                     <div class="input-group-prepend">
                         <div class="input-group-text" id="dollar-sign"><b>$</b></div>
                     </div>
-                    <input name="cost" type="number" min=0 step=0.01 value=0 class="form-control" id="cost" placeholder="Enter cost" required>
+                    <input name="cost" type="number" min=0 step=0.01 value="{{obj.cost}}"" class="form-control" id="cost" placeholder="Enter cost" required>
                 </div>
             </div>
         </div>
@@ -51,29 +59,42 @@
     <div class="form-row">
         <div class="form-group col-md-4">
             <label for="start"><b>Start Date</b><br>
-                <input type="date" name="start">
+                <input type="date" name="start"
+                {% if obj.startDate != None %}
+                    value="{{obj.startDate.date()}}"
+                {% endif %}>
             </label>
         </div>
         <div class="form-group col-md-4">
             <label for="end"><b>End Date</b><br>
-                <input type="date" name="end">
+                <input type="date" name="end"
+                {% if obj.endDate != None %}
+                    value="{{obj.endDate.date()}}"
+                {% endif %}>
             </label>
         </div>
         <div class="form-group col-md-4">
             <label for="deadline"><b>Application Deadline</b><br>
-                <input type="date" name="deadline">
+                <input type="date" name="deadline"
+                {% if obj.deadline != None %}
+                    value="{{obj.deadline.date()}}"
+                {% endif %}>
             </label>
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-6">
             <label for="location"><b>Location</b></label>
-            <input name="location" type="text" class="form-control" id="location" placeholder="Enter Location">
+            <input name="location" type="text" class="form-control" id="location" placeholder="Enter Location"
+                {% if obj.location != None %}
+                    value={{obj.location}}
+                {% endif %}
+            >
         </div>
         <div class="form-group col-md-6">
             <label for="grades"><b>Grades</b></label>
             <input name="grades" type="text" class="form-control" id="grades"
-                placeholder="Enter grades separated by commas (e.g. 9,10,11)" required>
+                placeholder="Enter grades separated by commas (e.g. 9,10,11)" required value={{obj.grades}}>
         </div>
     </div>
     <div class="mb-2 font-weight-bold">
