--- a/app/templates/edit/scholarship.html
+++ b/app/templates/edit/scholarship.html
@@ -9,23 +9,23 @@
 {% block title %}Edit Scholarship{% endblock %}
 
 {% block body %}
-<form action="/scholarships/edit" method="POST">
+<form action="/scholarships/edit/{{obj.scholarshipID}}" method="POST">
     <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label font-weight-bold">Title</label>
         <div class="col-sm-10">
-            <input name="title" type="text" class="form-control" id="title" placeholder="Enter title" required>
+            <input name="title" type="text" class="form-control" id="title" placeholder="Enter title" value="{{obj.title}}" required>
         </div>
     </div>
     <div class="form-group row">
         <label for="description" class="col-sm-2 col-form-label font-weight-bold">Description</label>
         <div class="col-sm-10">
-            <textarea name="description" class="form-control" id="description" rows="3"></textarea>
+            <textarea name="description" class="form-control" id="description" rows="3">{{obj.description}}</textarea>
         </div>
     </div>
     <div class="form-group row">
         <label for="deadline" class="col-sm-2 col-form-label font-weight-bold">Application Deadline</label>
         <div class="col-sm-10">
-            <input type="date" name="deadline" required>
+            <input type="date" name="deadline" required value="{{obj.deadline.date()}}">
         </div>
     </div>
     <div class="form-group row">
@@ -34,7 +34,7 @@
             <div class="input-group-prepend">
                 <div class="input-group-text" id="dollar-sign"><b>$</b></div>
             </div>
-            <input name="amount" type="number" type="number" min=0 step=0.01 value=0 class="form-control" id="amount"
+            <input name="amount" type="number" type="number" min=0 step=0.01 value="{{obj.amount}}" class="form-control" id="amount"
                 placeholder="Enter the amount of money rewarded">
         </div>
     </div>
@@ -42,17 +42,26 @@
         <label for="eligibility" class="col-sm-2 col-form-label font-weight-bold">Eligibility</label>
         <div class="col-sm-10">
             <input name="eligibility" type="text" class="form-control" id="eligibility"
-                placeholder="Who is eligible for this scholarship?">
+                placeholder="Who is eligible for this scholarship?" value="{{obj.eligibility}}">
         </div>
     </div>
     <div class="mb-2 font-weight-bold">
         Link(s)
     </div>
-    <div id="links-container" class="form-group">
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Add link" id="link0" name="link0">
+    {% for i in range(obj.links|length) %}
+        <div id="links-container" class="form-group">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Add link" id="link{{i}}" name="link{{i}}" value="{{obj.links[i]}}">
+            </div>
         </div>
-    </div>
+    {% endfor %}
+    {% if obj.links|length == 0 %}
+        <div id="links-container" class="form-group">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Add link" id="link0" name="link0">
+            </div>
+        </div>
+    {% endif %}
     <button type="button" class="btn btn-primary" id="add-link">Add Another Link</button>
     <button type="submit" class="btn btn-success">Submit</button>
 </form>
